update pokedex and about

--- a/about.html
+++ b/about.html
@@ -35,13 +35,13 @@
         <section class="about-flex">
             <article class="my-story">
                 <h2>My Story</h2>
-                <p><img src="assets/images/julia-photo.jpg" alt="julia photo" id="julia-photo">I come from a varied background and I have many different interests. My curiosity for science led me to study at the University of Calgary and earn a Bachelor of Science degree. After focusing on science for the first two years, I found that I missed doing creative work, as I grew up drawing, painting, and taking art classes. I decided to pursue a minor in art. This was the best decision I could have made, as it gave my program balance and revived a passion for creativity that I had lost for a while.  I found a community within my printmaking courses. Sometimes I wished I had a full four years to spend in the art department, and I often found it difficult to bring together the two fields I enjoyed. I frequently explored these ideas in my printmaking and photography work.</p>
+                <p><img src="assets/images/julia-photo.jpg" alt="julia photo" id="julia-photo">I come from a varied background and I have many different interests. My curiosity for science led me to study at the University of Calgary and earn a Bachelor of Science degree. After focusing on science for the first two years, I found that I missed doing creative work, as I grew up drawing, painting, and taking art classes. I decided to pursue a minor in art. This was the best decision I could have made, as it gave my program balance and revived a passion for creativity that I had lost for a while.  I found a community within my printmaking courses. Sometimes I found it difficult to bring together the two fields I enjoyed, and I frequently explored these ideas in my printmaking and photography work.</p>
 
                 <p>Upon graduation I struggled to find work related to science due to the economic downturn, so I broadened my job search.  I worked for a few years in administrative jobs in the banking industry and was promoted to a more senior role in my branch.  I enjoyed the problem-solving aspect of my job and being the branch detective, but ultimately I found that my passion was not in banking.</p>
 
                 <p>Ideally I wanted to do work that would combine my creative and analytical sides. I wanted to challenge my mind and solve problems, similar to my previous work.  After a lot of time spent thinking, researching, attending meet-ups, and experimenting with coding tutorials, I decided to pursue web development. This seemed like the perfect combination of all my interests, so I attended the Web Developer program at SAIT to further my skills. I had fun building projects with code, seeing the text I typed in an editor translate into a beautiful visual design or help accomplish a useful task.</p> 
 
-                <p>While creating my projects I also found that I loved the design process. The visual side of design - like typography, composition, color palettes, working with negative space - came natually with my background in art. With more practice and time spent working in the industry as a web developer I became more passionate about user experience design and creating useful, purposeful products that ease frustration and make people's day-to-day lives easier. </p>
+                <p>While creating my projects I also found that I loved the design process. The visual side of design - like typography, composition, color palettes, working with negative space - came natually with my background in art. With more practice and time spent working in the industry as a full stack web developer I became more passionate about user experience design and creating useful, purposeful products that ease frustration and make people's day-to-day lives easier. </p>
                     
                 <p>All of my experiences and interests have brought me to what I am doing today. There is still a lot to learn, but I am excited to continue learning and improving my skills. </p>
             </article>
@@ -60,7 +60,8 @@
                 <h3>Back-end</h3>
                     <ul>
                         <li>Node.js/Express</li>
-                        <li>AWS and Serverless</li>
+                        <li>Serverless Framework</li>
+                        <li>AWS services including: Lambda, DynamoDB, S3, Cloudwatch, EC2, API Gateway, Route 53, Cognito</li>
                         <li>C#/.NET</li>
                         <li>NoSQL and SQL databases including:  MongoDB Atlas, DynamoDB, SQL Server, MySQL</li>
                         <li>Familiar with Python and PHP</li>
