--- a/projects.html
+++ b/projects.html
@@ -39,7 +39,7 @@
     </header>
 
     <main class="web-main-flexbox">
-      <a class="project-card-link" href="projects/pokemon-api.html">
+      <a class="project-card-link" href="projects/pokedex.html">
         <section class="web-undivided-mind-section project-section-flex">
           <img
             src="assets/images/web-screenshots/pokedex-v2-screenshot.jpg"
