--- a/projects/pokedex.html
+++ b/projects/pokedex.html
@@ -145,7 +145,7 @@
 
         <hr class="hr-style"></hr>
 
-        <h2>Conclusion</h2>
+        <h2>Conclusions</h2>
 
         <p>Creating Version 1 of this project was very challenging for me at the time, as I was still new to web development.  Version 2 had its own challenges, particularly with fetching the pokemon data asynchronously, but I was able to leverage my JavaScript experience to solve the problem.</p>
 
