new photos added

--- a/art-photos.html
+++ b/art-photos.html
@@ -100,6 +100,37 @@
             src="assets/images/art-photos/photography/photos-square/IMG_4724editcanmoretrees-square.JPG"
             alt="canmore trees"
         /></a>
+        <a href="#photo-mountain-beach"
+          ><img
+            src="assets/images/art-photos/photography/photos-square/beach-wide-bw-square.JPG"
+            alt="person on a mountain beach"
+        /></a>
+        <a href="#photo-nose-hill"
+          ><img
+            src="assets/images/art-photos/photography/photos-square/NoseHillField2-square.JPG"
+            alt="nose hill fields"
+        /></a>
+        <a href="#photo-cactus"
+          ><img
+            src="assets/images/art-photos/photography/photos-square/CactusBW-square.JPG"
+            alt="roadside cactus from moving car"
+        /></a>
+        <a href="#photo-flowers"
+          ><img
+            src="assets/images/art-photos/photography/photos-square/cabin-golden-hour-flowers-square.JPG"
+            alt="flowers on a table"
+        /></a>
+        <a href="#photo-opera"
+          ><img
+            src="assets/images/art-photos/photography/photos-square/OperaHouseNight4BW-square.JPG"
+            alt="sydney opera house"
+        /></a>
+
+        <a href="#photo-terrace-beach"
+          ><img
+            src="assets/images/art-photos/photography/photos-square/terrace-beach-rocks-square.JPG"
+            alt="person on terrace beach"
+        /></a>
 
         <!-- regular aspect ratio -->
         <a href="#_" class="overlay" id="photo-clock"
@@ -161,6 +192,36 @@
           ><img
             src="assets/images/art-photos/photography/IMG_4724editcanmoretrees.JPG"
             alt="canmore trees"
+        /></a>
+        <a href="#_" class="overlay" id="photo-mountain-beach"
+          ><img
+            src="assets/images/art-photos/photography/beach-wide-bw.JPG"
+            alt="person on a mountain beach"
+        /></a>
+        <a href="#_" class="overlay" id="photo-nose-hill"
+          ><img
+            src="assets/images/art-photos/photography/NoseHillField2.JPG"
+            alt="nose hill fields"
+        /></a>
+        <a href="#_" class="overlay" id="photo-cactus"
+          ><img
+            src="assets/images/art-photos/photography/CactusBW.JPG"
+            alt="roadside cactus from moving car"
+        /></a>
+        <a href="#_" class="overlay" id="photo-flowers"
+          ><img
+            src="assets/images/art-photos/photography/cabin-golden-hour-flowers.JPG"
+            alt="flowers on a table"
+        /></a>
+        <a href="#_" class="overlay" id="photo-opera"
+          ><img
+            src="assets/images/art-photos/photography/OperaHouseNight4BW.JPG"
+            alt="sydney opera house"
+        /></a>
+        <a href="#_" class="overlay" id="photo-terrace-beach"
+          ><img
+            src="assets/images/art-photos/photography/terrace-beach-rocks.JPG"
+            alt="person on terrace beach"
         /></a>
       </section>
 
