type in prime video, fixing placement of items on home page

--- a/projects/prime-video.html
+++ b/projects/prime-video.html
@@ -108,7 +108,7 @@
         </div>
 
         <div class="prime-content prime-reverse">
-          <p>An issue I noticed when browsing through these UIs is that while still navigable, there were a lot of options and buttons on the screen for the user to click on. Sometimes I was confused about where find basic functionality like to search, find my recently watched content, log out, and so on. With my designs I simplified the UI by removing some of the clutter and leaving only the most essential functions in place. When planning my designs I asked myself – could my grandma use this app? I tried to get my designs to a place that was as close as possible to “yes” while still fulfilling the project requirements.</p>
+          <p>An issue I noticed when browsing through these UIs is that while still navigable, there were a lot of options and buttons on the screen for the user to click on. Sometimes I was confused about where to find basic functionality like searching, recently watched content, a log out button, and so on. With my designs I simplified the UI by removing some of the clutter and leaving only the most essential functions in place. When planning my designs I asked myself – could my grandma use this app? I tried to get my designs to a place that was as close as possible to “yes” while still fulfilling the project requirements.</p>
         <img src="../assets/images/prime/prime-sketch.jpg" alt="sketches" class="prime-img  prime-sketch">
         </div>
        
