new project, css cleanup

--- a/projects.html
+++ b/projects.html
@@ -39,6 +39,20 @@
     </header>
 
     <main class="web-main-flexbox">
+      <a class="project-card-link" href="projects/canvas.html">
+        <section class="web-undivided-mind-section project-section-flex">
+          <img
+            src="assets/images/web-screenshots/canvas.jpg"
+            alt="screenshot of canvas app"
+            class="project-img"
+          />
+          <div class="card-text-container">
+            <h1 class="project-card-title">Canvas app</h1>
+            <p class="project-card-description-dev">Web Development</p>
+          </div>
+        </section>
+      </a>
+
       <a class="project-card-link" href="projects/pokedex.html">
         <section class="web-undivided-mind-section project-section-flex">
           <img
@@ -179,7 +193,7 @@
             class="project-img"
           />
           <div class="card-text-container">
-            <h1 class="project-card-title">React Scrabble App</h1>
+            <h1 class="project-card-title">React Scrabble Tile App</h1>
             <p class="project-card-description-dev">Web Development</p>
           </div>
         </section>
