--- a/projects/mern-flashcards.html
+++ b/projects/mern-flashcards.html
@@ -76,9 +76,9 @@
 
                     <h2>Design</h2>
 
-                    <div class="science-content">
+                    <div class="project-ind-content">
                         <img src="../assets/images/flashcards/flashcards-mobile.JPG" alt="flashcard home page mobile" class="flashcard-home">
-                        <div class="science-paragraphs">
+                        <div class="project-ind-paragraphs">
                             <p>A dark background is used across the app as it contrasted nicely with the light coloured flashcards. An image from unsplash was added for texture, with a dark coloured background-blend-mode overlayed on top in the CSS.</p>
 
                             <p>As I use Tailwind and Styled-Components for work I wanted to incorporate them in this project for extra practice. </p>
@@ -100,7 +100,7 @@
                         <img src="../assets/images/flashcards/physics-mobile-answer.JPG" alt="physic mobile" class="flashcard-mobile-img"  style="margin: 20px">
                     </div>
 
-                    <div class="science-content">
+                    <div class="project-ind-content">
                         <p style="margin: 30px; max-width: 60ch;">The graphics used for the amino acid and organic chemistry flashcards I created myself in Adobe Illustrator. In doing so I was able to make the molecules look exactly how I wanted, practice using Illustrator, and not have to worry about image copyright.</p>
                         <img src="../assets/images/flashcards/Glutamine.svg" alt="amino acid graphic" class="flashcard-img">
                     </div>
