--- a/projects/pokedex.html
+++ b/projects/pokedex.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Julia Hack | Pokedex - Version 2</title>
     <link rel="stylesheet" href="../assets/css/styles.css" />
-    <link rel="stylesheet" href="../assets/css/science.css">
     <link rel="stylesheet" href="../assets/css/pokedex.css">
     <link rel="stylesheet" href="../assets/css/project-page-extra.css" />
     <link
@@ -108,12 +107,10 @@
 
         <p>It was important for me to make the design more visually interesting than Version 1, which was white and grey except for the pokemon images and felt a bit plain.  I had been using gradients a lot at work, so I thought a red and blue gradient in the background would brighten up the app and match well with Pokemon’s branding.  The card style is very similar to Version 1, with a more subtle shadow effect on mouse hover. The Ash and Pikachu image in the header ties the colour palette together and gives the app a cartoonish, playful feel.</p>
 
-        <div class="science-content">
-            <img src="../assets/images/pokedex/pokedex-loading.PNG" alt="science app mockup" class="science-img">
-            <div class="science-paragraphs">
+        <div class="project-ind-content">
+            <img src="../assets/images/pokedex/pokedex-loading.PNG" alt="pokedex loading screenshot" class="pokedex-img">
+            <div class="project-ind-paragraphs">
                 <p>When the app is first opened and the data is being fetched there are a few seconds of lag, so it was important to have an interesting loading screen.  I decided to incorporate a pokeball into the loading component, since I had not used it yet anywhere else in the design, and gave it a bouncing animation.</p>
-
-               
 
             </div>
 
