--- a/projects/react-node-science.html
+++ b/projects/react-node-science.html
@@ -75,9 +75,9 @@
 
                     <h2>Design</h2>
 
-                    <div class="science-content">
+                    <div class="project-ind-content">
                         <img src="../assets/images/science-design.png" alt="science app mockup" class="science-img">
-                        <div class="science-paragraphs">
+                        <div class="project-ind-paragraphs">
                             <p>Many of my designs have a light colour palette so this time I wanted to change things up a bit and use a darker colour palette.</p>
 
                             <p>While researching dark web designs I learned that it is very visually appealing and good for accessibility to pair light, bright colours with darker design elements. I choose a bright teal and purple, as they felt modern and well-suited to a science theme.</p>
