--- a/projects/react-scrabble.html
+++ b/projects/react-scrabble.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Julia Hack | React Scrabble App</title>
+    <title>Julia Hack | React Scrabble Tile App</title>
     <link rel="stylesheet" href="../assets/css/styles.css" />
     <link rel="stylesheet" href="../assets/css/project-page-extra.css" />
     <link
@@ -47,7 +47,7 @@
 
     <main class="project-ind-main">
       <section class="project-header">
-        <h1 class="project-ind-title">React Scrabble App</h1>
+        <h1 class="project-ind-title">React Scrabble Tile App</h1>
 
         <img
           src="../assets/images/web-screenshots/react-scrabble-screenshot.JPG"
