add library to skills

--- a/about.html
+++ b/about.html
@@ -53,8 +53,8 @@
                         <li>HTML, CSS, Sass</li>
                         <li>JavaScript, TypeScript</li>
                         <li>jQuery</li>
-                        <li>Styling libraries/frameworks including: Bootstrap, TailwindCSS, Styled-Components</li>
-                        <li>React, Next.js</li>
+                        <li>Styling libraries/frameworks including: Styled-Components, TailwindCSS, Bootstrap</li>
+                        <li>React, Next.js, D3.js</li>
                     </ul>
 
                 <h3>Back-end</h3>
