new fade-in animations

--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Julia Hack | Projects</title>
     <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="assets/css/animations.css" />
     <link
       rel="shortcut icon"
       href="assets/images/favicon.ico"
@@ -17,29 +18,38 @@
       <a href="index.html"
         ><img
           src="assets/images/ai-interfacelogo-desktop-white.svg"
-          class="page-julia-logo"
+          class="page-julia-logo fade-in-1"
           alt="julia's logo"
       /></a>
 
       <nav class="global-nav" id="global-nav">
         <ul class="global-nav-ul">
-          <img src="assets/images/close.svg" alt="close-menu" id="close-menu" />
-          <li class="project-nav-link">
-            <a id="nav-active" href="projects.html">Projects</a>
+          <img
+            src="assets/images/close.svg"
+            alt="close-menu"
+            id="close-menu"
+            class="fade-in-1"
+          />
+          <li class="project-nav-link fade-in-1">
+            <a href="projects.html">Projects</a>
           </li>
-          <li class="art-photos-nav-link">
+          <li class="art-photos-nav-link fade-in-1">
             <a href="art-photos.html">Photos &amp; Art</a>
           </li>
-          <li class="about-nav-link"><a href="about.html">About</a></li>
-          <li class="contact-nav-link"><a href="contact.html">Contact</a></li>
+          <li class="about-nav-link fade-in-1">
+            <a href="about.html">About</a>
+          </li>
+          <li class="contact-nav-link fade-in-1">
+            <a href="contact.html">Contact</a>
+          </li>
         </ul>
       </nav>
 
-      <div class="hamburger-menu" id="hamburger-menu"></div>
+      <div class="hamburger-menu fade-in-1" id="hamburger-menu"></div>
     </header>
 
     <main class="web-main-flexbox">
-      <a class="project-card-link" href="projects/canvas.html">
+      <a class="project-card-link fade-in-1" href="projects/canvas.html">
         <section class="web-undivided-mind-section project-section-flex">
           <img
             src="assets/images/web-screenshots/canvas.jpg"
@@ -53,7 +63,7 @@
         </section>
       </a>
 
-      <a class="project-card-link" href="projects/pokedex.html">
+      <a class="project-card-link fade-in-1" href="projects/pokedex.html">
         <section class="web-undivided-mind-section project-section-flex">
           <img
             src="assets/images/web-screenshots/pokedex-v2-screenshot.jpg"
@@ -67,7 +77,7 @@
         </section>
       </a>
 
-      <a class="project-card-link" href="projects/roar-bikes.html">
+      <a class="project-card-link fade-in-1" href="projects/roar-bikes.html">
         <section class="web-undivided-mind-section project-section-flex">
           <img
             src="assets/images/roar-bikes/header-crop.jpg"
@@ -81,7 +91,10 @@
         </section>
       </a>
 
-      <a class="project-card-link" href="projects/mern-flashcards.html">
+      <a
+        class="project-card-link fade-in-1"
+        href="projects/mern-flashcards.html"
+      >
         <section class="web-undivided-mind-section project-section-flex">
           <img
             src="assets/images/web-screenshots/flashcards-screenshot.jpg"
@@ -95,7 +108,7 @@
         </section>
       </a>
 
-      <a class="project-card-link" href="projects/roots.html">
+      <a class="project-card-link fade-in-1" href="projects/roots.html">
         <section class="web-undivided-mind-section project-section-flex">
           <img
             src="assets/images/web-screenshots/roots-web.jpg"
@@ -111,7 +124,10 @@
         </section>
       </a>
 
-      <a class="project-card-link" href="projects/react-node-science.html">
+      <a
+        class="project-card-link fade-in-1"
+        href="projects/react-node-science.html"
+      >
         <section class="web-undivided-mind-section project-section-flex">
           <img
             src="assets/images/web-screenshots/science-news.jpg"
@@ -125,7 +141,7 @@
         </section>
       </a>
 
-      <a class="project-card-link" href="projects/prime-video.html">
+      <a class="project-card-link fade-in-1" href="projects/prime-video.html">
         <section class="web-undivided-mind-section project-section-flex">
           <img
             src="assets/images/web-screenshots/prime-desktop.jpg"
@@ -139,7 +155,7 @@
         </section>
       </a>
 
-      <a class="project-card-link" href="projects/node-app.html">
+      <a class="project-card-link fade-in-1" href="projects/node-app.html">
         <section class="web-undivided-mind-section project-section-flex">
           <img
             src="assets/images/web-screenshots/undivided-mind-screenshot.JPG"
@@ -153,7 +169,7 @@
         </section>
       </a>
 
-      <a class="project-card-link" href="projects/my-plants.html">
+      <a class="project-card-link fade-in-1" href="projects/my-plants.html">
         <section class="web-undivided-mind-section project-section-flex">
           <img
             src="assets/images/web-screenshots/plant-site-screenshot.JPG"
@@ -169,7 +185,7 @@
         </section>
       </a>
 
-      <a class="project-card-link" href="projects/art-portfolio.html">
+      <a class="project-card-link fade-in-1" href="projects/art-portfolio.html">
         <section class="web-undivided-mind-section project-section-flex">
           <img
             src="assets/images/web-screenshots/first-portfolio-screenshot.JPG"
@@ -185,7 +201,10 @@
         </section>
       </a>
 
-      <a class="project-card-link" href="projects/react-scrabble.html">
+      <a
+        class="project-card-link fade-in-1"
+        href="projects/react-scrabble.html"
+      >
         <section class="web-undivided-mind-section project-section-flex">
           <img
             src="assets/images/web-screenshots/react-scrabble-screenshot.JPG"
@@ -198,10 +217,12 @@
           </div>
         </section>
       </a>
+
+      <!-- remember to add a new animation delay in animation.css when we add a new card -->
     </main>
 
     <footer>
-      <p>
+      <p class="fade-in-1">
         <a href="https://github.com/jchack1" target="_blank"
           ><i class="fa fa-github-square"></i
         ></a>
@@ -212,7 +233,7 @@
           ><i class="fa fa-instagram"></i
         ></a>
       </p>
-      <p>&copy; Julia Hack</p>
+      <p class="fade-in-1">&copy; Julia Hack</p>
     </footer>
     <script src="script.js"></script>
   </body>
