--- a/art-photos.html
+++ b/art-photos.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Julia Hack | Photos &amp; Art</title>
     <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="assets/css/animations.css" />
     <link
       rel="shortcut icon"
       href="assets/images/favicon.ico"
@@ -17,28 +18,39 @@
       <a href="index.html"
         ><img
           src="assets/images/ai-interfacelogo-desktop-white.svg"
-          class="page-julia-logo"
+          class="page-julia-logo fade-in-1"
           alt="julia's logo"
       /></a>
 
       <nav class="global-nav" id="global-nav">
         <ul class="global-nav-ul">
-          <img src="assets/images/close.svg" alt="close-menu" id="close-menu" />
-          <li class="project-nav-link"><a href="projects.html">Projects</a></li>
-          <li class="art-photos-nav-link">
-            <a id="nav-active" href="art-photos.html">Photos &amp; Art</a>
+          <img
+            src="assets/images/close.svg"
+            alt="close-menu"
+            id="close-menu"
+            class="fade-in-1"
+          />
+          <li class="project-nav-link fade-in-1">
+            <a href="projects.html">Projects</a>
           </li>
-          <li class="about-nav-link"><a href="about.html">About</a></li>
-          <li class="contact-nav-link"><a href="contact.html">Contact</a></li>
+          <li class="art-photos-nav-link fade-in-1">
+            <a href="art-photos.html">Photos &amp; Art</a>
+          </li>
+          <li class="about-nav-link fade-in-1">
+            <a href="about.html">About</a>
+          </li>
+          <li class="contact-nav-link fade-in-1">
+            <a href="contact.html">Contact</a>
+          </li>
         </ul>
       </nav>
 
-      <div class="hamburger-menu" id="hamburger-menu"></div>
+      <div class="hamburger-menu fade-in-1" id="hamburger-menu"></div>
     </header>
 
     <main>
       <h2 class="art-photos-titles">Photography</h2>
-      <section class="art-photos-section drawing-section">
+      <section class="art-photos-section drawing-section fade-in-1">
         <!-- square -->
         <a href="#photo-clock"
           ><img
@@ -226,7 +238,7 @@
       </section>
 
       <h2 class="art-photos-titles">Drawing</h2>
-      <section class="art-photos-section drawing-section">
+      <section class="art-photos-section drawing-section fade-in-2">
         <!-- square -->
         <a href="#drawing-cezanne"
           ><img
@@ -293,7 +305,7 @@
       </section>
 
       <h2 class="art-photos-titles">Printmaking</h2>
-      <section class="art-photos-section printmaking-section">
+      <section class="art-photos-section printmaking-section fade-in-3">
         <!-- square -->
         <a href="#print-cells"
           ><img
