--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Julia Hack | Contact</title>
     <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="assets/css/animations.css" />
     <link
       rel="shortcut icon"
       href="assets/images/favicon.ico"
@@ -17,29 +18,38 @@
       <a href="index.html"
         ><img
           src="assets/images/ai-interfacelogo-desktop-white.svg"
-          class="page-julia-logo"
+          class="page-julia-logo fade-in-1"
           alt="julia's logo"
       /></a>
 
       <nav class="global-nav" id="global-nav">
         <ul class="global-nav-ul">
-          <img src="assets/images/close.svg" alt="close-menu" id="close-menu" />
-          <li class="project-nav-link"><a href="projects.html">Projects</a></li>
-          <li class="art-photos-nav-link">
+          <img
+            src="assets/images/close.svg"
+            alt="close-menu"
+            id="close-menu"
+            class="fade-in-1"
+          />
+          <li class="project-nav-link fade-in-1">
+            <a href="projects.html">Projects</a>
+          </li>
+          <li class="art-photos-nav-link fade-in-1">
             <a href="art-photos.html">Photos &amp; Art</a>
           </li>
-          <li class="about-nav-link"><a href="about.html">About</a></li>
-          <li class="contact-nav-link">
-            <a id="nav-active" href="contact.html">Contact</a>
+          <li class="about-nav-link fade-in-1">
+            <a href="about.html">About</a>
+          </li>
+          <li class="contact-nav-link fade-in-1">
+            <a href="contact.html">Contact</a>
           </li>
         </ul>
       </nav>
 
-      <div class="hamburger-menu" id="hamburger-menu"></div>
+      <div class="hamburger-menu fade-in-1" id="hamburger-menu"></div>
     </header>
 
     <main class="contact-main">
-      <section class="contact-info-section">
+      <section class="contact-info-section fade-in-2">
         <h2>Connect on social media</h2>
         <article class="contact-icon">
           <a href="https://www.linkedin.com/in/juliahack" target="_blank"
@@ -53,7 +63,7 @@
           ></a>
         </article>
 
-        <article class="contact-blog">
+        <article class="contact-blog fade-in-3">
           <h2>Visit my blog</h2>
           <p>
             I write about my experience building projects and everything I am
@@ -67,7 +77,7 @@
         </article>
       </section>
 
-      <section class="contact-form-section">
+      <section class="contact-form-section fade-in-1">
         <form
           action="https://formspree.io/xzbzqvgr"
           method="POST"
