--- a/projects/art-portfolio.html
+++ b/projects/art-portfolio.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Julia Hack | Art Portfolio Website</title>
     <link rel="stylesheet" href="../assets/css/styles.css" />
+    <link rel="stylesheet" href="../assets/css/animations.css" />
     <link
       rel="shortcut icon"
       href="../assets/images/favicon.ico"
@@ -17,7 +18,7 @@
       <a href="../index.html"
         ><img
           src="../assets/images/ai-interfacelogo-desktop-white.svg"
-          class="page-julia-logo"
+          class="page-julia-logo fade-in-1"
           alt="julia's logo"
       /></a>
 
@@ -27,25 +28,28 @@
             src="../assets/images/close.svg"
             alt="close-menu"
             id="close-menu"
+            class="fade-in-1"
           />
-          <li class="project-nav-link">
-            <a id="nav-active" href="../projects.html">Projects</a>
+          <li class="project-nav-link fade-in-1">
+            <a href="../projects.html">Projects</a>
           </li>
-          <li class="art-photos-nav-link">
+          <li class="art-photos-nav-link fade-in-1">
             <a href="../art-photos.html">Photos &amp; Art</a>
           </li>
-          <li class="about-nav-link"><a href="../about.html">About</a></li>
-          <li class="contact-nav-link">
+          <li class="about-nav-link fade-in-1">
+            <a href="../about.html">About</a>
+          </li>
+          <li class="contact-nav-link fade-in-1">
             <a href="../contact.html">Contact</a>
           </li>
         </ul>
       </nav>
 
-      <div class="hamburger-menu" id="hamburger-menu"></div>
+      <div class="hamburger-menu fade-in-1" id="hamburger-menu"></div>
     </header>
 
     <main class="project-ind-main">
-      <section class="project-header">
+      <section class="project-header fade-in-1">
         <h1 class="project-ind-title">Art Portfolio Website</h1>
 
         <img
