styling updates - sticky nav

--- a/art-photos.html
+++ b/art-photos.html
@@ -48,7 +48,7 @@
       <div class="hamburger-menu fade-in-1" id="hamburger-menu"></div>
     </header>
 
-    <main>
+    <main class="top-margin">
       <h2 class="art-photos-titles">Photography</h2>
       <section class="art-photos-section drawing-section fade-in-1">
         <!-- square -->
@@ -238,7 +238,7 @@
       </section>
 
       <h2 class="art-photos-titles">Drawing</h2>
-      <section class="art-photos-section drawing-section fade-in-2">
+      <section class="art-photos-section drawing-section">
         <!-- square -->
         <a href="#drawing-cezanne"
           ><img
@@ -305,7 +305,7 @@
       </section>
 
       <h2 class="art-photos-titles">Printmaking</h2>
-      <section class="art-photos-section printmaking-section fade-in-3">
+      <section class="art-photos-section printmaking-section">
         <!-- square -->
         <a href="#print-cells"
           ><img
