--- a/projects.html
+++ b/projects.html
@@ -48,7 +48,7 @@
       <div class="hamburger-menu fade-in-1" id="hamburger-menu"></div>
     </header>
 
-    <main class="web-main-flexbox">
+    <main class="web-main-flexbox top-margin">
       <a class="project-card-link fade-in-1" href="projects/canvas.html">
         <section class="web-undivided-mind-section project-section-flex">
           <img
