styling updates - animations

--- a/projects/canvas.html
+++ b/projects/canvas.html
@@ -82,7 +82,9 @@
       </section>
 
 
-      <section class="project-ind-body">
+      <section class="project-ind-body fade-in-2">
+
+    
         <hr class="hr-style"></hr>
 
         <h2>Purpose of project
@@ -131,7 +133,9 @@
             </div>
 
         </div>
-        <!-- <hr class="hr-style"></hr> -->
+
+
+        <hr class="hr-style"></hr>
 
         <h3>Screen sizes
         </h3>
@@ -149,6 +153,9 @@
 
         <p>Another thing that happens at small screen sizes is the canvas simply doesn’t feel big enough to still have fun with it. Ultimately, I’d recommend using the app on a desktop computer with a mouse.  Not every app has to be made for every screen size. 
     </p>
+
+
+
 
         <hr class="hr-style"></hr>
 
@@ -169,6 +176,7 @@
         </p>
 
         <hr class="hr-style"></hr>
+
 
         <h2>Conclusions</h2>
 
