--- a/projects/mern-flashcards.html
+++ b/projects/mern-flashcards.html
@@ -76,7 +76,7 @@
             
                 </section>
 
-                <section class="project-ind-body">
+                <section class="project-ind-body fade-in-2">
                     <hr class="hr-style"></hr>
 
                     <h2>Purpose of the project</h2>
