--- a/projects/my-plants.html
+++ b/projects/my-plants.html
@@ -84,7 +84,7 @@
         </div>
       </section>
 
-      <section class="project-ind-body">
+      <section class="project-ind-body fade-in-2">
         <hr class="hr-style"></hr>
 
         <p>Besides the project goals stated above, the purpose of this site is to tell a story about my plants. A user arrives at the home page to get a brief introduction to the theme of the site, and can quickly see the pages available to navigate - in this case, the plant categories. </p>
