--- a/projects/prime-video.html
+++ b/projects/prime-video.html
@@ -67,7 +67,7 @@
         </div>
       </section>
 
-      <section class="project-ind-body">
+      <section class="project-ind-body fade-in-2">
         <hr class="hr-style"></hr>
 
         <h2>Requirements</h2>
