--- a/projects/pokedex.html
+++ b/projects/pokedex.html
@@ -82,7 +82,7 @@
       </section>
 
 
-      <section class="project-ind-body">
+      <section class="project-ind-body fade-in-2">
         <hr class="hr-style"></hr>
 
         <h2>Version 1</h2>
