--- a/projects/react-scrabble.html
+++ b/projects/react-scrabble.html
@@ -14,7 +14,14 @@
       type="image/x-icon"
     />
   </head>
-  <body>
+  <body
+    style="
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    "
+  >
     <header class="page-header">
       <a href="../index.html"
         ><img
