--- a/projects/roar-bikes.html
+++ b/projects/roar-bikes.html
@@ -62,7 +62,7 @@
             
                 </section>
 
-                <section class="project-ind-body">
+                <section class="project-ind-body fade-in-2">
                     <hr class="hr-style"></hr>
 
                     <h2>Roar Bikes’ clients</h2>
