new links, deployed old apps on render.com

--- a/projects/mern-flashcards.html
+++ b/projects/mern-flashcards.html
@@ -68,7 +68,7 @@
                           </p>
                 
                           <p>
-                            <a href="https://react-science-flashcards.herokuapp.com/" target="_blank"
+                            <a href="https://my-science-flashcards.onrender.com/" target="_blank"
                               >View the app</a
                             >
                           </p>
