--- a/projects/node-app.html
+++ b/projects/node-app.html
@@ -93,7 +93,7 @@
           </p>
 
           <p>
-            <a href="https://undivided-mind.herokuapp.com/" target="_blank"
+            <a href="https://node-undivided-mind.onrender.com/" target="_blank"
               >View the app</a
             >
           </p>
