--- a/projects/react-node-science.html
+++ b/projects/react-node-science.html
@@ -68,7 +68,7 @@
                           </p>
                 
                           <p>
-                            <a href="https://react-science-news.herokuapp.com/" target="_blank"
+                            <a href="https://my-science-news.onrender.com/" target="_blank"
                               >View the app</a
                             >
                           </p>
