new project page and card added

--- a/projects.html
+++ b/projects.html
@@ -49,6 +49,22 @@
     </header>
 
     <main class="web-main-flexbox top-margin">
+      <a class="project-card-link fade-in-1" href="projects/tourism-site.html">
+        <section class="web-undivided-mind-section project-section-flex">
+          <img
+            src="assets/images/web-screenshots/tourism-screenshot.jpg"
+            alt="screenshot of canvas app"
+            class="project-img"
+          />
+          <div class="card-text-container">
+            <h1 class="project-card-title">Tourism site with Three.js</h1>
+            <p class="project-card-description-dev">
+              Web Design and Development
+            </p>
+          </div>
+        </section>
+      </a>
+
       <a class="project-card-link fade-in-1" href="projects/canvas.html">
         <section class="web-undivided-mind-section project-section-flex">
           <img
