new page for weather app

--- a/projects.html
+++ b/projects.html
@@ -217,6 +217,20 @@
         </section>
       </a>
 
+      <a class="project-card-link fade-in-1" href="projects/weather-app.html">
+        <section class="web-undivided-mind-section project-section-flex">
+          <img
+            src="assets/images/web-screenshots/weather-app.jpg"
+            alt="screenshot of first portfolio site"
+            class="project-img"
+          />
+          <div class="card-text-container">
+            <h1 class="project-card-title">Weather App</h1>
+            <p class="project-card-description-dev">Web Development</p>
+          </div>
+        </section>
+      </a>
+
       <!-- remember to add a new animation delay in animation.css when we add a new card -->
     </main>
 
