--- a/projects.html
+++ b/projects.html
@@ -65,6 +65,22 @@
         </section>
       </a>
 
+      <a class="project-card-link fade-in-1" href="projects/random-timer.html">
+        <section class="web-undivided-mind-section project-section-flex">
+          <img
+            src="assets/images/web-screenshots/timer-screenshot.JPG"
+            alt="screenshot of random timer app"
+            class="project-img"
+          />
+          <div class="card-text-container">
+            <h1 class="project-card-title">Random Timer App</h1>
+            <p class="project-card-description-dev">
+              Web Design and Development
+            </p>
+          </div>
+        </section>
+      </a>
+
       <a class="project-card-link fade-in-1" href="projects/canvas.html">
         <section class="web-undivided-mind-section project-section-flex">
           <img
@@ -73,7 +89,7 @@
             class="project-img"
           />
           <div class="card-text-container">
-            <h1 class="project-card-title">Canvas app</h1>
+            <h1 class="project-card-title">Canvas App</h1>
             <p class="project-card-description-dev">Web Development</p>
           </div>
         </section>
