updates to about me copy and art page

--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
     <main class="top-margin">
         
         
-        <p id="about-paragraph" class="fade-in-1"> I am a full stack web developer and designer.  I am a creative visual and technical problem-solver with a passion for exceptional user experiences.  </p>
+        <p id="about-paragraph" class="fade-in-1"> I am a full stack developer, working in the industry since 2020.  I am a creative visual and technical problem-solver with a passion for exceptional user experiences.  </p>
 
         <section class="about-flex fade-in-2">
             <article class="my-story">
