--- a/art-photos.html
+++ b/art-photos.html
@@ -49,6 +49,32 @@
     </header>
 
     <main class="top-margin">
+      <div class="art-intro-container">
+        <p class="art-title art-paragraph">
+          Why have I included a whole page dedicated to art?
+        </p>
+        <p class="art-paragraph">
+          Art and creativity inform all aspects of my life, as well as my
+          approach to problem solving as a developer.
+        </p>
+        <p class="art-paragraph">
+          Science, technology and art are not opposing disciplines - in fact, it
+          is essential to combine them in order to produce innovative, ethical,
+          and engaging work.
+        </p>
+        <p class="art-paragraph">
+          I am inspired by visual art and incorporate this into my work as a
+          developer by making every feature as beautiful, aesthetically
+          pleasing, and (at least for my personal projects) intriguing as
+          possible.
+        </p>
+        <p class="art-paragraph art-paragraph-small">
+          Here is a small sample of what I do when I’m not coding.
+        </p>
+      </div>
+      
+      <hr class="hr-style art-hr"></hr>
+
       <h2 class="art-photos-titles">Photography</h2>
       <section class="art-photos-section drawing-section fade-in-1">
         <!-- square -->
@@ -237,6 +263,8 @@
         /></a>
       </section>
 
+      <hr class="hr-style art-hr"></hr>
+
       <h2 class="art-photos-titles">Drawing</h2>
       <section class="art-photos-section drawing-section">
         <!-- square -->
@@ -303,6 +331,8 @@
             alt="conte window drawing"
         /></a>
       </section>
+
+      <hr class="hr-style art-hr"></hr>
 
       <h2 class="art-photos-titles">Printmaking</h2>
       <section class="art-photos-section printmaking-section">
