--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <section id="home-intro">
             <h1 id="home-title" class="fade-in-1">Hi, I'm Julia</h1>
 
-            <p id="home-p1"  class="fade-in-2">I'm a web developer and designer.</p>
-            <p id="home-p2" class="fade-in-3">I love designing beautiful, user-friendly interfaces and bringing them to life with organized, efficient code.</p>
+            <p id="home-p1"  class="fade-in-2">I'm a full stack developer.</p>
+            <p id="home-p2" class="fade-in-3">I combine my love of programming, art, and design to create beautiful and engaging user experiences.</p>
         
             <p id="home-button" class="fade-in-4"><a href="projects.html">My projects</a></p>
         </section>
