remove instagram logo; new chat app project page

--- a/projects.html
+++ b/projects.html
@@ -49,11 +49,25 @@
     </header>
 
     <main class="web-main-flexbox top-margin">
+      <a class="project-card-link fade-in-1" href="projects/aws-chat-app.html">
+        <section class="web-undivided-mind-section project-section-flex">
+          <img
+            src="assets/images/web-screenshots/chat-messages.JPG"
+            alt="screenshot of canvas app"
+            class="project-img"
+          />
+          <div class="card-text-container">
+            <h1 class="project-card-title">AWS AppSync Chat App</h1>
+            <p class="project-card-description-dev">Web Development</p>
+          </div>
+        </section>
+      </a>
+
       <a class="project-card-link fade-in-1" href="projects/tourism-site.html">
         <section class="web-undivided-mind-section project-section-flex">
           <img
             src="assets/images/web-screenshots/tourism-screenshot.jpg"
-            alt="screenshot of canvas app"
+            alt="screenshot of tourism site"
             class="project-img"
           />
           <div class="card-text-container">
@@ -257,9 +271,6 @@
         ></a>
         <a href="https://www.linkedin.com/in/juliahack" target="_blank"
           ><i class="fa fa-linkedin"></i
-        ></a>
-        <a href="https://www.instagram.com/juliachack/?hl=en" target="_blank"
-          ><i class="fa fa-instagram"></i
         ></a>
       </p>
       <p class="fade-in-1">&copy; Julia Hack</p>
