--- a/projects/tourism-site.html
+++ b/projects/tourism-site.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Julia Hack | Canvas app</title>
+    <title>Julia Hack | Tourism site</title>
     <link rel="stylesheet" href="../assets/css/styles.css" />
     <link rel="stylesheet" href="../assets/css/pokedex.css">
     <link rel="stylesheet" href="../assets/css/project-page-extra.css" />
@@ -56,7 +56,7 @@
 
         <img
           src="../assets/images/web-screenshots/tourism-screenshot.jpg"
-          alt="pokemon app screenshot"
+          alt="tourism site screenshot"
           class="project-header-image"
         />
 
@@ -161,9 +161,7 @@
         <a href="https://www.linkedin.com/in/juliahack" target="_blank"
           ><i class="fa fa-linkedin"></i
         ></a>
-        <a href="https://www.instagram.com/juliachack/?hl=en" target="_blank"
-          ><i class="fa fa-instagram"></i
-        ></a>
+        
       </p>
       <p>&copy; Julia Hack</p>
     </footer>
