correction on chat project intro

--- a/projects/aws-chat-app.html
+++ b/projects/aws-chat-app.html
@@ -65,7 +65,7 @@
             This chat app was created using AWS AppSync, via Serverless Framework, with a React and Styled-Components front-end.
           </p>
           <p>
-            All backend and API functionality are handled by AWS services - Cognito for authentication, DynamoDB for the database, Lambda for more complicated functionality, and AppSync with JavaScript resolvers and a GraphQL API to handle real-time functionality.
+            All backend and API functionality are handled by AWS services - Amplify and Cognito for authentication, DynamoDB for the database, Lambda for more complicated functionality, and AppSync with JavaScript resolvers and a GraphQL API to handle real-time functionality.
           </p>
 
           <p>
