updates to copy

--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
     <main class="top-margin">
         
         
-        <p id="about-paragraph" class="fade-in-1"> I am a full stack developer, working in the industry since 2020.  I am a creative visual and technical problem-solver with a passion for exceptional user experiences.  </p>
+        <p id="about-paragraph" class="fade-in-1"> I have been working as a full stack developer since 2020.  I am a creative visual and technical problem-solver with a passion for exceptional user experiences.  </p>
 
         <hr class="hr-style art-hr"></hr>
 
