Convert old netlify.com links to netlify.app

--- a/contact.html
+++ b/contact.html
@@ -70,8 +70,8 @@
             learning along my web development journey.
           </p>
           <p class="blog-link">
-            <a href="https://juliachack-dev-blog.netlify.com/" target="_blank"
-              >juliachack-dev-blog.netlify.com</a
+            <a href="https://juliachack-dev-blog.netlify.app/" target="_blank"
+              >juliachack-dev-blog.netlify.app</a
             >
           </p>
         </article>
