--- a/projects/my-plants.html
+++ b/projects/my-plants.html
@@ -77,7 +77,7 @@
           </p>
 
           <p>
-            <a href="https://keen-kilby-8d90d6.netlify.com" target="_blank"
+            <a href="https://keen-kilby-8d90d6.netlify.app" target="_blank"
               >View the site</a
             >
           </p>
